# telegram_downloader

./: .dockerignore  .flake8  .gitignore  DEVELOPMENT.md  Dockerfile  Dockerfile.alpine  Dockerfile.prod  LICENSE  MANIFEST.in  Makefile  README.md  docker-compose.yml  downloader_bot.py  install.sh  main.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  setup.py
.github/workflows/: pipeline-script.yml  pr-checks.yml  pr-test.yml  release.yml  test-on-push.yml
scripts/: pipeline.sh
src/: __init__.py  main.py  version.py
src/bot/: __init__.py  client.py
src/core/: config.py  user_state.py
src/download_manager/: __init__.py  manager.py
src/downloads/: __init__.py  download_manager.py
src/handlers/: callback_handlers.py  command_handlers.py  message_handlers.py
src/services/: __init__.py  download_service.py
src/utils/: keyboard_utils.py  path_utils.py
tests/: conftest.py
tests/fixtures/: __init__.py
tests/integration/: test_bot_integration.py
tests/unit/: test_config.py  test_download_manager.py  test_keyboard_utils.py  test_path_utils.py  test_user_state.py
